# rag-agent-terraform

./: .env.example  .flake8  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  MULTI_AGENT_PLAN.md  Makefile  README.md  debug_agent_tasks.py  debug_recursion.py  demo.py  docker-compose.override.yml  evaluation_results.json  pyproject.toml  run_integration_tests.py  test.Dockerfile  test_app.py  test_routing.py  test_similarity.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  infrastructure.md
.github/workflows/: docker.yml  frontend.yml  python.yml  release.yml  terraform.yml
data/: README.md
data/documents/: README.md  sample_code.py  sample_markdown.md  sample_text.txt
docker/app/: Dockerfile  test.Dockerfile
docs/: README.md  api.md  rag-system.md  troubleshooting.md
frontend/: .eslintrc.js  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: App.test.tsx  App.tsx  setupTests.ts
frontend/src/__tests__/: App.test.tsx  README.md  api.test.ts  test-utils.tsx
frontend/src/components/: ChatInterface.tsx  DocumentList.tsx  DocumentUpload.tsx  QueryInterface.tsx  QueryResults.tsx
frontend/src/components/__tests__/: ChatInterface.test.tsx  DocumentList.test.tsx  DocumentUpload.test.tsx  QueryInterface.test.tsx  QueryResults.test.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
mcp-coordinator/: Dockerfile  main.py  requirements.txt
monitoring/: README.md  alerting.yml  prometheus.yml
monitoring/grafana/: dashboards.yml  datasources.yml
monitoring/grafana/dashboards/: database-performance.json  infrastructure.json  rag-agent-performance.json  rag-agent-performance.json.bak
redis/: redis.conf
scripts/: seed_db.sh  test_monitoring.sh
src/: debug_recursion.py  evaluation_results.json  requirements.txt
src/app/: __init__.py  agent_communication.py  config.py  document_loader.py  graph_persistence.py  main.py  mcp_client.py  models.py  multi_agent_graph.py  multi_agent_state.py  ollama_client.py  rag_agent.py  redis_memory.py  vector_store.py
src/scripts/: evaluate_rag.py  ingest_documents.py  setup_vector_db.py
src/tests/: conftest.py  test_agent_communication.py  test_api.py  test_api_integration.py  test_config.py  test_document_ingestion.py  test_document_loader.py  test_error_handling.py  test_mcp_integration.py  test_multi_agent_integration.py  test_ollama_client.py  test_rag_agent.py  test_vector_store.py
src/tests/integration/: conftest.py  test_database_integration.py  test_end_to_end.py  test_redis_integration.py  test_simple_integration.py
terraform/: locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
