[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-agent-terraform"
version = "0.1.0"
description = "Terraform-managed local infrastructure for agentic RAG system"
authors = [{name = "Christian Hein", email = "christian@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "langchain==0.0.350",
    "llama-index==0.9.15",
    "pgvector==0.2.4",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "python-multipart==0.0.6",
    "pymupdf==1.23.6",
    "pytesseract==0.3.10",
    "pillow==10.1.0",
    "numpy==1.24.3",
    "pandas==2.1.4",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "requests==2.31.0",
    "aiofiles==23.2.1",
    "structlog==23.2.0",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
    "pytest-cov==4.1.0",
]
docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.8",
]

[project.urls]
Homepage = "https://github.com/yourusername/rag-agent-terraform"
Documentation = "https://github.com/yourusername/rag-agent-terraform/docs"
Repository = "https://github.com/yourusername/rag-agent-terraform"
Issues = "https://github.com/yourusername/rag-agent-terraform/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app", "scripts"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]
known_third_party = ["fastapi", "uvicorn", "langchain", "llama_index"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pgvector.*", "pymupdf.*", "pytesseract.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: marks tests as async",
]